[tool.poetry]
name = "stylegan2-pytorch"
version = "0.1.0"
description = ""
authors = ["Marcus Bitzl <marcus@bitzl.io>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.4.0"
tqdm = "^4.43.0"
wandb = "^0.8.28"
torchvision = "^0.5.0"
numpy = "^1.18.1"
ninja = "^1.9.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
